tests/fail/backend/vm_native_main/main.kira
@Main
@Native
function main() {
    print("native main");
    return;
}
